--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@babel/preset-typescript": "^7.12.13",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-typescript": "^8.1.1",
+    "@types/animejs": "^3.1.3",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.31",
     "rollup": "^2.38.5"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "express": "^4.17.1",
     "gl-matrix": "^3.3.0",
     "open": "^8.0.2",
