--- a/package.json
+++ b/package.json
@@ -21,17 +21,25 @@
     "@babel/preset-typescript": "^7.12.13",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-typescript": "^8.1.1",
-    "@types/animejs": "^3.1.3",
     "@types/glob": "^7.1.3",
+    "@types/howler": "^2.2.2",
     "@types/node": "^14.14.31",
     "rollup": "^2.38.5"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
+    "@pixi/filter-adjustment": "^4.1.0",
+    "@pixi/filter-advanced-bloom": "^4.1.0",
+    "@pixi/filter-bloom": "^4.1.0",
+    "@pixi/filter-drop-shadow": "^4.1.0",
+    "@pixi/filter-glow": "^4.1.0",
+    "@pixi/filter-godray": "^4.1.0",
+    "@pixi/filter-simple-lightmap": "^4.1.0",
+    "@pixi/filter-tilt-shift": "^4.1.0",
     "express": "^4.17.1",
     "gl-matrix": "^3.3.0",
+    "howler": "^2.2.1",
     "open": "^8.0.2",
-    "pixi-filters": "^4.0.0",
-    "pixi.js": "^5.0.0-rc"
+    "pixi-filters": "^4.1.1",
+    "pixi.js": "^6.0.0-X"
   }
 }
