--- a/src/developerTools/electronApp/package.json
+++ b/src/developerTools/electronApp/package.json
@@ -13,6 +13,14 @@
     "electron": "^12.0.0"
   },
   "dependencies": {
+    "@pixi/filter-adjustment": "^4.1.0",
+    "@pixi/filter-advanced-bloom": "^4.1.0",
+    "@pixi/filter-bloom": "^4.1.0",
+    "@pixi/filter-drop-shadow": "^4.1.0",
+    "@pixi/filter-glow": "^4.1.0",
+    "@pixi/filter-godray": "^4.1.0",
+    "@pixi/filter-simple-lightmap": "^4.1.0",
+    "@pixi/filter-tilt-shift": "^4.1.0",
     "path": "^0.12.7",
     "vex-js": "^4.1.0"
   }
