--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "./node_modules/.bin/babel src -d dist",
-    "build": "node projectRunScripts/createListOfResources.js && node projectRunScripts/populateObjectGenerator.js && node_modules/.bin/rollup -c && node_modules/.bin/rollup -c rollup.config.DevTools.js && cp -a ./src/resources ./dist/ && node ./projectRunScripts/simpleServer.js",
+    "build": "node projectRunScripts/createListOfResources.js && node projectRunScripts/populateSceneIndex.js && node projectRunScripts/populateObjectGenerator.js && node_modules/.bin/rollup -c && node_modules/.bin/rollup -c rollup.config.DevTools.js && cp -a ./src/resources ./dist/ && node ./projectRunScripts/simpleServer.js",
     "copyResources": "cp -a ./src/resources ./dist/",
     "build-tools": "node_modules/.bin/rollup -c rollup.config.DevTools.js",
     "build-engine": "node_modules/.bin/rollup -c"
