--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rollup": "^2.38.5"
   },
   "dependencies": {
+    "@pixi/extract": "^6.1.3",
     "@pixi/filter-adjustment": "^4.1.0",
     "@pixi/filter-advanced-bloom": "^4.1.0",
     "@pixi/filter-bloom": "^4.1.0",
@@ -39,7 +40,6 @@
     "gl-matrix": "^3.3.0",
     "howler": "^2.2.1",
     "open": "^8.0.2",
-    "pixi-filters": "^4.1.1",
-    "pixi.js": "^6.0.0-X"
+    "pixi.js": "6.1.3"
   }
 }
