--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-typescript": "^7.12.13",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-typescript": "^8.1.1",
+    "@types/fontfaceobserver": "^2.1.0",
     "@types/glob": "^7.1.3",
     "@types/howler": "^2.2.2",
     "@types/node": "^14.14.31",
@@ -37,9 +38,11 @@
     "@pixi/filter-simple-lightmap": "^4.1.0",
     "@pixi/filter-tilt-shift": "^4.1.0",
     "express": "^4.17.1",
+    "fontfaceobserver": "^2.1.0",
     "gl-matrix": "^3.3.0",
     "howler": "^2.2.1",
     "open": "^8.0.2",
+    "pixi-particles": "^4.3.1",
     "pixi.js": "6.1.3"
   }
 }
