--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,15 @@ dist/currentResources.txt
 src/resources/_generated_tiles/
 src/resources/
 !src/resources/.gitignore
-src/objects/
-!src/objects/.gitignore
-src/code/
+!src/resources/.gitkeep
+src/objects/*
+!src/objects/.gitkeep
+src/code/*
 !src/code/.gitignore
+!src/code/.gitkeep
 src/scenes/
 !src/scenes/.gitignore
+!src/scenes/.gitkeep
 src/developerTools/electronApp/customAnimatedTilesMetaData_DONT_DELETE.json
 resources
 dist/resources.txt
