--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "howler": "^2.2.1",
     "open": "^8.0.2",
     "pixi-particles": "^4.3.1",
-    "pixi.js": "6.1.3"
+    "pixi.js": "6.1.3",
+    "socket.io-client": "^4.4.1"
   }
 }
